--- a/BlazorShop/BlazorShop/Pages/Products.razor
+++ b/BlazorShop/BlazorShop/Pages/Products.razor
@@ -16,16 +16,20 @@ else
 
     @if (productCount > 0)
     {
-        const int itemsPerRow = 4;
-        var productRowList = new List<ProductDTO>();
 
-        @for (int i = 0; i < productCount; i++)
+        
+
+
+        @foreach (var prodGroup in GetGroupedProductByCategory())
         {
-            productRowList = Products.Skip(i * itemsPerRow).Take(itemsPerRow).ToList();
+            <h4>@GetCategoryName(prodGroup)</h4>
             <div class="row mt-3">
-                <DisplayProducts Products="@productRowList"></DisplayProducts>
+                <DisplayProducts Products="@prodGroup.Take(4)"></DisplayProducts>
             </div>
+            <hr class="mb-3" />
 
         }
+
+
     }
 }
