finish displaying single product

--- a/BlazorShop/BlazorShop/Pages/ProductDetails.razor
+++ b/BlazorShop/BlazorShop/Pages/ProductDetails.razor
@@ -22,6 +22,9 @@ else
             <p class="mb-4">
                 <b>@Product.Price.ToString("C")&nbsp;(@Product.Quantity items in stock)</b>
             </p>
+            <div>
+                <button class="btn btn-success"><b>Add to Cart</b></button>
+            </div>
         </div>
     </div>
 }
