--- a/BlazorShop/BlazorShop/Pages/Products.razor
+++ b/BlazorShop/BlazorShop/Pages/Products.razor
@@ -5,9 +5,14 @@
 
 
 
-@if (Products == null)
+@if (Products == null && ErrorMessage == null)
 {
-    <h3>Product is loading...</h3>
+     <DisplaySpinner/>
+
+}
+else if(ErrorMessage != null)
+{
+    <DisplayError ErrorMessage="@ErrorMessage"></DisplayError>
 }
 else
 {
