--- a/BlazorShop/BlazorShop/Pages/ShoppingCart.razor
+++ b/BlazorShop/BlazorShop/Pages/ShoppingCart.razor
@@ -25,7 +25,11 @@ else
                         <div class="col-md-8">
                             <h5>@item.ProductName</h5>
                             <div class="mb-4">@item.ProductDescription</div>
-                            <span>Price: <b>@item.Price.ToString("C")</b></span>
+                            <span>
+                                Price: <b>@item.Price.ToString("C")</b>
+                                <input type="number" @bind="@item.Quantity">
+                                <button class="btn btn-info btn-sm" @onclick="(()=> UpdateQuantity_Click(item.Id,item.Quantity))">Update qty</button>
+                            </span>
                             <div>
                                 <button @onclick="(() => DeleteCartItem_Click(item.Id))" class="btn btn-danger sm">
                                     <i class="fa fa-trash" aria-hidden="true"></i>
