--- a/BlazorShop/BlazorShop/Pages/ShoppingCart.razor
+++ b/BlazorShop/BlazorShop/Pages/ShoppingCart.razor
@@ -42,7 +42,7 @@ else
             <div class="col-md-3">
                 <h5>Cart Summary</h5>
                 <div class="mt-2">
-                    <div>Total - </div>
+                    <div>Total - (@TotalQuantity items)<b>@TotalPrice</b></div>
                     <a href="#" class="btn btn-success">
                         <span class="oi oi-credit-card"></span>&nbsp; Proceed to Checkout
                     </a>
