--- a/BlazorShop/BlazorShop/Pages/ShoppingCart.razor
+++ b/BlazorShop/BlazorShop/Pages/ShoppingCart.razor
@@ -27,8 +27,12 @@ else
                             <div class="mb-4">@item.ProductDescription</div>
                             <span>
                                 Price: <b>@item.Price.ToString("C")</b>
-                                <input type="number" @bind="@item.Quantity">
-                                <button class="btn btn-info btn-sm" @onclick="(()=> UpdateQuantity_Click(item.Id,item.Quantity))">Update qty</button>
+                                <input @oninput="()=>UpdateQty_Input(item.Id)"
+                                       type="number" @bind="@item.Quantity" />
+                                <button data-itemId="@item.Id" class="btn btn-info btn-sm update-qty"
+                                @onclick="(() => UpdateQtyCartItem_Click(item.Id, item.Quantity))">
+                                    Update Qty
+                                </button>
                             </span>
                             <div>
                                 <button @onclick="(() => DeleteCartItem_Click(item.Id))" class="btn btn-danger sm">
