--- a/BlazorShop/BlazorShop/Pages/ShoppingCart.razor
+++ b/BlazorShop/BlazorShop/Pages/ShoppingCart.razor
@@ -47,7 +47,7 @@ else
                 <h5>Cart Summary</h5>
                 <div class="mt-2">
                     <div>Total - (@TotalQuantity items)<b>@TotalPrice</b></div>
-                    <a href="#" class="btn btn-success">
+                    <a href="Checkout" class="btn btn-success">
                         <span class="oi oi-credit-card"></span>&nbsp; Proceed to Checkout
                     </a>
                 </div>
