--- a/BlazorShop/BlazorShop/Shared/NavMenu.razor
+++ b/BlazorShop/BlazorShop/Shared/NavMenu.razor
@@ -3,7 +3,6 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorShop</a>
         <a class="navbar-brand" href=""><span class="fas fa-shopping-cart" aria-hidden="true"></span>&nbsp;ShopOnline</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
@@ -33,6 +32,13 @@
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
+    private int shoppingCartItemsCount = 0;
+
+    private void ToggleNavMenu()
+    {
+        collapseNavMenu = !collapseNavMenu;
+    }
+
     protected override void OnInitialized()
     {
         shoppingCartService.OnShoppingCartChanged += ShoppingCartChanged;
@@ -46,4 +52,5 @@
     {
         shoppingCartService.OnShoppingCartChanged -= ShoppingCartChanged;
     }
+
 }
