--- a/BlazorShop/BlazorShop/Shared/ProductCategoriesNavMenu.razor
+++ b/BlazorShop/BlazorShop/Shared/ProductCategoriesNavMenu.razor
@@ -1,15 +1,19 @@
 ﻿@inherits ProductCategoriesNavMenuBase
 
-@if(ProductCategoryDtos == null && ErrorMessage == null){
-    <DisplaySpinner></DisplaySpinner>
+@if (ProductCategoryDtos == null && ErrorMessage == null)
+{
+    <DisplaySpinner />
 }
-else if(ErrorMessage != null){
-    <DisplayError ErrorMessage="@ErrorMessage"></DisplayError>
+else if (ErrorMessage != null)
+{
+    <DisplayError ErrorMessage="@ErrorMessage" />
 }
-else{
-    @foreach(var productCategory in ProductCategoryDtos)
+else
+{
+    @foreach (var productCategory in ProductCategoryDtos)
     {
-        var link = "/ProductByCategory/" + productCategory.Id;
+        var link = "/ProductsByCategory/" + productCategory.Id;
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="@link">
                 <span class="@productCategory.IconCSS"></span>&nbsp;@productCategory.Name
